@@ -5,6 +5,10 @@
 ################################################################################
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
+RH-2012-04-10-0:  Bugfix:     Merge in Sun's JG-2010-01-13-0:
+                              - execd does not verify the pe task start user in
+                                non CSP mode
+
 RH-2012-03-20-3:  Misc.       -Wno-strict-aliasing is needed for -Werror
 
 RH-2012-03-20-2:  Enhancem.   qmon is now optional
